--- a/Flyingdarts.Shared.csproj
+++ b/Flyingdarts.Shared.csproj
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Title>Flyingdarts.Shared</Title>
-		<VersionPrefix>1.0.0</VersionPrefix>
+		<VersionPrefix>1.0.1</VersionPrefix>
 		<Version>$(VersionPrefix)</Version>
 		<PackageId>Flyingdarts.Shared</PackageId>
 		<Authors>Flyingdarts</Authors>
@@ -16,7 +16,7 @@
 		<LicenseFile>LICENSE.md</LicenseFile>
 		<PackageTags>Flyingdarts Shared</PackageTags>
 		<PackageIcon>icon.png</PackageIcon>
-		<PackageReleaseNotes>Public release</PackageReleaseNotes>
+		<PackageReleaseNotes>Added BadRequestException class</PackageReleaseNotes>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
