--- a/.github/workflows/build-and-publish-package.yml
+++ b/.github/workflows/build-and-publish-package.yml
@@ -26,3 +26,17 @@ jobs:
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
           dotnet nuget push "bin/Release/Flyingdarts.Shared.*.nupkg" -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate
+      
+      - name: Get repo name
+        run: |
+          REPO_NAME=$GITHUB_REPOSITORY
+          echo "REPO_NAME_WITHOUT_DASHES=$(echo $REPO_NAME | sed 's/flyingdarts\///')" >> $GITHUB_ENV  
+      - name: Discord Webhook Action
+        uses: tsickert/discord-webhook@v5.3.0
+        with:
+          webhook-url: ${{ secrets.DISCORD_DEVELOPMENT_ENDPOINTS_CHANNEL_WEBHOOK }}
+          content: Job completed
+          embed-title: ${{ github.ref_name }}
+          embed-description: ${{ github.owner }} + $REPO_NAME_WITH_DASHES
+          embed-footer-text: ${{ github.repository_owner }}
+          embed-timestamp: ${{ github.event.head_commit.timestamp }}          
