--- a/.github/workflows/build-and-publish-package.yml
+++ b/.github/workflows/build-and-publish-package.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Discord Webhook Action
         uses: tsickert/discord-webhook@v5.3.0
         with:
-          webhook-url: ${{ secrets.DISCORD_DEVELOPMENT_ENDPOINTS_CHANNEL_WEBHOOK }}
+          webhook-url: ${{ secrets.DISCORD_DEVELOPMENT_PACKAGES_CHANNEL_WEBHOOK }}
           content: Job completed
           embed-title: ${{ github.ref_name }}
-          embed-description: ${{ github.owner }} + $REPO_NAME_WITH_DASHES
+          embed-description: ${{ github.owner }} + $REPO_NAME_WITHOUT_DASHES
           embed-footer-text: ${{ github.repository_owner }}
           embed-timestamp: ${{ github.event.head_commit.timestamp }}          
